--- a/Emoji Dictionary iOS App/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary iOS App/Base.lproj/Main.storyboard
@@ -38,5 +38,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="brY-EO-0Gr">
+            <objects>
+                <viewController id="vCz-ln-azD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="Gyl-Ur-sZV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🍽" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xW-v8-6z6">
+                                <rect key="frame" x="78" y="70" width="218" height="239"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLATES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cv-XP-vZz">
+                                <rect key="frame" x="157" y="349" width="60" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0cv-XP-vZz" firstAttribute="top" secondItem="5xW-v8-6z6" secondAttribute="bottom" constant="40" id="3ww-a4-HOq"/>
+                            <constraint firstItem="5xW-v8-6z6" firstAttribute="top" secondItem="FcA-6w-vOb" secondAttribute="top" constant="50" id="Eca-HW-KNP"/>
+                            <constraint firstItem="0cv-XP-vZz" firstAttribute="centerX" secondItem="Gyl-Ur-sZV" secondAttribute="centerX" id="Pyk-eT-3cb"/>
+                            <constraint firstItem="5xW-v8-6z6" firstAttribute="centerX" secondItem="Gyl-Ur-sZV" secondAttribute="centerX" id="fXy-Sq-6Q7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="FcA-6w-vOb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JG2-OG-hcS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="733.60000000000002" y="34.632683658170919"/>
+        </scene>
     </scenes>
 </document>
